--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="en" ng-app="workoutOfDay">
     <head>
       <meta charset="UTF-8">
-      <title>Document</title>
-    </head>
-    <body>
+      <title>Workout Of The Day</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  </head>
+    <body ng-controller="MainController as vm">
+      {{vm.text}}
 
+
+
+
+
+  <!-- Angular Scripts -->
+  <script src="/app.js"></script>
+  <script src="/controllers/main_controller.js"></script>
     </body>
   </html>
