workouts display on index

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
       <meta charset="UTF-8">
       <title>Workout Of The Day</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <link rel="stylesheet" href="/assets/css/main.css">
+
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   </head>
     <body ng-controller="MainController as vm">
-      {{vm.text}}
+      <h1>Workout Of The Day</h1>
+
+      <div class="workout" ng-repeat="workout in vm.workouts | orderBy: '-workout_date' ">
+         <h4>{{workout.title}} </h4>
+         <p> {{workout.workout_date | date:"MM/dd/yyyy"}} </p>
+         <p> {{workout.summary}} </p>
+   </div>
 
 
 
