workout controllers and comment windows

--- a/public/index.html
+++ b/public/index.html
@@ -61,5 +61,7 @@
   <script src="/app.routes.js"></script>
   <script src="/services/workout.dataservice.js"></script>
   <script src="/controllers/main_controller.js"></script>
+  <script src="/controllers/workouts_controller.js"></script>
+
     </body>
   </html>
