--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <link rel="stylesheet" href="/assets/css/main.css">
-
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 
@@ -15,7 +14,7 @@
       <h1>Workout Of The Day</h1>
 
       <button ui-sref-active="active" ui-sref="home"> Home </button>
-      <button ui-sref-active="active" ui-sref="activities"> Activities </button>
+      <button ui-sref-active="active" ui-sref="workouts"> Workouts </button>
       <button ui-sref-active="active" ui-sref="about"> About </button>
 
       <ui-view>
