--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h5>Please Log In or Sign Up</h5>
       </div>
       <div ng-show="vm.isLoggedIn()">
-        <h5>Welcome {{vm.currentUser}}</h5>
+        <h5>You're Logged In!</h5>
       </div>
 
       <button ui-sref-active="active" ui-sref="home"> Home </button>
