--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
   </head>
     <body ng-controller="MainController as vm">
+    <div id="container">
+    <div id="top-container">
       <h1>Workout Of The Day</h1>
       <div ng-hide="vm.isLoggedIn()">
         <h5>Please Log In or Sign Up</h5>
@@ -19,15 +21,15 @@
         <h5>You're Logged In!</h5>
       </div>
 
-      <button ui-sref-active="active" ui-sref="home"> Home </button>
-      <button ui-sref-active="active" ui-sref="workouts"> Workouts </button>
-      <button ui-sref-active="active" ui-sref="about"> About </button>
-      <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="register"> Sign Up </button>
-      <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="login"> Log In </button>
-      <button ui-sref-active="active" ng-show="vm.isLoggedIn()"ng-click="vm.logout()"> Log Out </button>
-
+        <button ui-sref-active="active" ui-sref="home"> Home </button>
+        <button ui-sref-active="active" ui-sref="workouts"> Workouts </button>
+        <button ui-sref-active="active" ui-sref="about"> About </button>
+        <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="register"> Sign Up </button>
+        <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="login"> Log In </button>
+        <button ui-sref-active="active" ng-show="vm.isLoggedIn()"ng-click="vm.logout()"> Log Out </button>
+      </div>
       <ui-view></ui-view>
-
+      </div>
   <!-- Angular Scripts -->
   <script src="/app.js"></script>
   <script src="/app.routes.js"></script>
