--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
         <h5>Please Log In or Sign Up</h5>
       </div>
       <div ng-show="vm.isLoggedIn()">
-        <h5>You're Logged In!</h5>
+        <h5>You're Logged In!
+        <a ui-sref-active="active" ng-show="vm.isLoggedIn()"ng-click="vm.logout()">Log Out</a> </h5>
       </div>
 
         <button ui-sref-active="active" ui-sref="home"> Home </button>
