--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
       <link rel="stylesheet" href="/assets/css/main.css">
       <link rel="stylesheet" href="/assets/css/animate.css">
+      <link href='https://fonts.googleapis.com/css?family=Butterfly+Kids' rel='stylesheet' type='text/css'>
+     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -24,9 +26,11 @@
         <a ui-sref-active="active" ng-show="vm.isLoggedIn()"ng-click="vm.logout()">Log Out</a> </h5>
       </div>
 
-        <!-- <button ui-sref-active="active" ui-sref="home"> Home </button> -->
+        <button ui-sref-active="active" ui-sref="home"> Home </button>
         <button ui-sref-active="active" ui-sref="workouts"> Workouts </button>
-        <button ui-sref-active="active" ui-sref="about"> About </button>
+        <!-- <button ui-sref-active="active" ui-sref="about"> About </button> -->
+        <button ui-sref-active="active" ui-sref="addActivity"> Add Activity </button>
+
         <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="register"> Sign Up </button>
         <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="login"> Log In </button>
       </div>
