workouts now showing on workout page

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <button ui-sref-active="active" ui-sref="home"> Home </button>
         <button ui-sref-active="active" ui-sref="workouts"> Workouts </button>
         <!-- <button ui-sref-active="active" ui-sref="about"> About </button> -->
-        <button ui-sref-active="active" ui-sref="addActivity"> Add Activity </button>
+        <button ui-sref-active="active" ui-sref="addWorkout"> Add Workout </button>
 
         <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="register"> Sign Up </button>
         <button ui-sref-active="active" ng-hide="vm.isLoggedIn()"ui-sref="login"> Log In </button>
